--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf dist && better-npm-run build",
+    "build": "rimraf static/dist && better-npm-run build",
     "dev": "concurrently --kill-others \"npm run start-dev\"",
     "start-dev": "better-npm-run start-dev",
     "start": "npm run start-prod",
@@ -39,6 +39,7 @@
   "license": "ISC",
   "dependencies": {
     "antd": "^2.11.1",
+    "babel-runtime": "^6.23.0",
     "compression": "^1.6.2",
     "express": "^4.15.3",
     "prop-types": "^15.5.10",
@@ -47,20 +48,24 @@
     "react-redux": "^5.0.5",
     "react-router": "^3.0.5",
     "react-router-redux": "^4.0.8",
+    "react-router-scroll": "^0.4.2",
     "redux": "^3.7.0",
-    "redux-promise-middleware": "^4.3.0",
     "redux-thunk": "^2.2.0",
-    "scroll-behavior": "^0.9.3",
     "serialize-javascript": "^1.3.0",
     "serve-favicon": "^2.4.3",
-    "superagent": "^3.5.2"
+    "superagent": "^3.5.2",
+    "webpack-isomorphic-tools": "^3.0.2"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-import": "^1.2.1",
+    "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-react-display-name": "^6.25.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-typecheck": "^3.9.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -73,7 +78,12 @@
     "less-loader": "^4.0.4",
     "morgan": "^1.8.2",
     "node-sass": "^4.5.3",
+    "piping": "^1.0.0-rc.4",
+    "react-transform-catch-errors": "^1.0.2",
+    "react-transform-hmr": "^1.0.4",
+    "redbox-react": "^1.4.2",
     "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^4.2.1",
     "rimraf": "^2.6.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
