--- a/package.json
+++ b/package.json
@@ -53,10 +53,10 @@
     "redux-thunk": "^2.2.0",
     "serialize-javascript": "^1.3.0",
     "serve-favicon": "^2.4.3",
-    "superagent": "^3.5.2",
-    "webpack-isomorphic-tools": "^3.0.2"
+    "superagent": "^3.5.2"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.0",
     "babel-plugin-add-module-exports": "^0.2.1",
@@ -75,10 +75,12 @@
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
+    "less": "^2.7.2",
     "less-loader": "^4.0.4",
     "morgan": "^1.8.2",
     "node-sass": "^4.5.3",
     "piping": "^1.0.0-rc.4",
+    "postcss-loader": "^2.0.6",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.4.2",
@@ -90,6 +92,7 @@
     "url-loader": "^0.5.9",
     "webpack": "^3.0.0",
     "webpack-dev-middleware": "^1.10.2",
-    "webpack-hot-middleware": "^2.18.0"
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-isomorphic-tools": "^3.0.2"
   }
 }
