--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "antd": "^2.11.1",
     "babel-runtime": "^6.23.0",
+    "classnames": "^2.2.5",
     "compression": "^1.6.2",
     "express": "^4.15.3",
     "prop-types": "^15.5.10",
@@ -66,6 +67,7 @@
     "babel-plugin-transform-react-display-name": "^6.25.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-typecheck": "^3.9.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -90,7 +92,7 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
-    "webpack": "^2.6.0",
+    "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-isomorphic-tools": "^3.0.1"
