--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,13 @@
 {
 	"presets": ["react", "es2015", "stage-0"],
 	"plugins": [
-		["import", { "libraryName": "antd", "style": "true" }],
-		"transform-runtime",
+		["import", { "libraryName": "antd", "style": true }],
+		["transform-runtime", {
+	    	"helpers": false,
+	    	"polyfill": false,
+	    	"regenerator": true,
+	    	"moduleName": "babel-runtime"
+	    }],
 		"add-module-exports",
 		"transform-decorators-legacy",
 		"transform-react-display-name"
