--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "express": "^4.15.3",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router": "^3.0.5",
