--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-router-redux": "^4.0.8",
     "react-router-scroll": "^0.4.2",
     "redux": "^3.7.0",
+    "redux-async-connect": "^1.0.0-rc4",
     "redux-thunk": "^2.2.0",
     "serialize-javascript": "^1.3.0",
     "serve-favicon": "^2.4.3",
