--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "antd": "^2.11.1",
     "babel-runtime": "^6.23.0",
+    "body-parser": "^1.17.2",
     "classnames": "^2.2.5",
     "compression": "^1.6.2",
     "express": "^4.15.3",
