--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "classnames": "^2.2.5",
     "compression": "^1.6.2",
     "express": "^4.15.3",
+    "js-sha256": "^0.6.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.0",
