--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.0",
+    "react-cookie": "^2.0.8",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router": "^3.0.5",
