--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.0",
-    "react-cookie": "^2.0.8",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router": "^3.0.5",
@@ -59,7 +58,9 @@
     "redux-thunk": "^2.2.0",
     "serialize-javascript": "^1.3.0",
     "serve-favicon": "^2.4.3",
-    "superagent": "^3.5.2"
+    "superagent": "^3.5.2",
+    "universal-cookie": "^2.0.8",
+    "universal-cookie-express": "^2.0.6"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.1",
