--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "babel-register": "^6.24.1",
     "better-npm-run": "0.0.15",
     "concurrently": "^3.4.0",
+    "crypto-js": "^3.1.9-1",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
